ServiceBase::setModel(): prevent crash triggered by Last.fm rewrite

BUGFIXES:
 * Prevent crash in ServiceBase::setModel triggered by Last.fm rewrite.

Lukáši, please test the patch so that we have no fear releasing 2.7
final.

BUG: 311723
FIXED-IN: 2.7